--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -27,7 +27,7 @@
     background-color: $light-color;
   }
   
-  &-main {
+  &-dark {
     @extend %btn-shared;
     color: #f4f4f4;
     background-color: $dark-color;
@@ -79,4 +79,21 @@ input[class^='btn-']:hover {
   &-4 {
     margin: 4rem 0;
   }
+}
+
+.section-title {
+  font-size: 2rem;
+  display: block;
+  padding-bottom: 1.5rem;
+  text-align: center;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.bottom-line {
+  height: 3px;
+  width: 3rem;
+  background: $main-color;
+  display: block;
+  margin: 0 auto 1rem auto;
 }
