add work gallery with transition

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'config';
 @import 'utilities';
+@import 'item_grid';
 
 // General Styles
 * {
@@ -328,7 +329,7 @@ img {
       padding: 0.5rem;
 
       &:hover {
-        background: $main-color;
+        background: $main-color; 
       }
     }
   }
